--- a/style.css
+++ b/style.css
@@ -162,3 +162,47 @@ textarea {
     background: linear-gradient(109deg, rgba(10,12,16,0.99) 15%, rgba(10,12,16,0.7) 50%, rgba(10,12,16,0.99) 85% );
     transition: visibility 0.7s ease-in-out;
 }
+
+#faleConosco {
+    cursor: pointer;
+}
+
+/*Responsividade*/
+
+@media (max-width: 1100px) {
+    p {
+        display: none;
+    }
+
+    .caixa-mae {
+        flex-direction: column;
+        padding: 7px;
+        justify-content: flex-start;
+        align-self: center;
+    }
+
+    .caixa-principal {
+        display: flex;
+    align-items: center;
+    flex-direction: column;    }
+
+    .imagem-principal {
+        width: 80vw;
+        height: auto;
+    }
+
+    header{
+        margin: 7px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .icon{
+    display: none;
+    }
+
+    header a{
+        font-size: 19px;
+    }
+}
